# ipt_tilde

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  LICENSE  README.md
.github/workflows/: ci.yml  sync.yml
app/ipt_example/: CMakeLists.txt  main.cpp
app/torch_tests/: CMakeLists.txt  main.cpp
asdf_remove/: CMakeLists.txt  asdf_remove.cpp  asdf_remove_test.cpp
build-xcode/ipt_tilde.xcodeproj/: project.pbxproj
build-xcode/ipt_tilde.xcodeproj/project.xcworkspace/xcuserdata/schwarz.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/ipt_tilde.xcodeproj/xcshareddata/xcschemes/: pipo.ipt.xcscheme
build-xcode/ipt_tilde.xcodeproj/xcuserdata/schwarz.xcuserdatad/xcschemes/: xcschememanagement.plist
build-xcode/pipo.ipt/pipo.ipt.xcodeproj/: project.pbxproj
ipt_tilde/: CMakeLists.txt  circular_buffer.h  classifier.h  energy_threshold.h  ipt_classifier.h  ipt_tilde.cpp  ipt_tilde_test.cpp  utility.h
libs/r8brain/: CMakeLists.txt
pipo.ipt/: CMakeLists.txt  PiPoIPT.h  PiPoIPT_schema.md  pipo.ipt-demo.maxpat  pipo.ipt.cpp
shared_code/: CMakeLists.txt  shared.h
signature/: package.sh  sign.sh
src/: CMakeLists.txt  circular_buffer.h  classifier.h  energy_threshold.h  ipt_classifier.h  leaky_integrator.h  model.h  utility.h
test/max/: test_playground.maxpat
